Fix: white space property not being applied on safari, increasing line height.

--- a/sources/ts/components/Sections/IndexSection/components/ProductDetailModalWindow/ProductDetailModalWindow.module.css
+++ b/sources/ts/components/Sections/IndexSection/components/ProductDetailModalWindow/ProductDetailModalWindow.module.css
@@ -131,7 +131,8 @@
 .product-description {
     color: #333;
     font-size: 15px;
-    white-space-collapse: break-spaces;
+    white-space: break-spaces;
+    line-height: 1.3;
 }
 
 .product-description:empty {
